# simple-recommendation-system

./: .gitignore  README.md  explore.ipynb  pyproject.toml
