[tool.poetry]
name = "simple-recommendation-system"
version = "0.1.0"
description = ""
authors = ["Oleh Toporkov <oleh.toporkov@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_recommendation_system"}]

[tool.poetry.dependencies]
python = "^3.10.10"
polars = "^1.15.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"
plotly = "^5.24.1"
nbformat = "^5.10.4"
urllib3 = "<2.0"
lightgbm = "^4.5.0"
optuna = "^4.1.0"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
